# mcp-streamablehttp-client

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
examples/: claude_desktop_config.json  command_examples.sh  demo.py  token_example.md
src/mcp_streamablehttp_client/: __init__.py  cli.py  config.py  oauth.py  proxy.py
tests/: test_oauth.py  test_proxy.py
